Adding ngrx/entity

--- a/package.json
+++ b/package.json
@@ -19,8 +19,12 @@
     "@angular/platform-browser": "~11.0.5",
     "@angular/platform-browser-dynamic": "~11.0.5",
     "@angular/router": "~11.0.5",
-    "@ngrx/effects": "^10.1.2",
-    "@ngrx/store": "^10.1.2",
+    "@ngrx/effects": "^10.0.0",
+    "@ngrx/entity": "^10.0.0",
+    "@ngrx/router-store": "^10.0.1",
+    "@ngrx/schematics": "^10.0.0",
+    "@ngrx/store": "^10.0.0",
+    "@ngrx/store-devtools": "^10.0.0",
     "bootstrap": "^4.5.3",
     "jasmine-marbles": "^0.6.0",
     "jquery": "^3.5.1",
